feat(chat): optimize return data

--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,11 @@ EXCEL_STORAGE_PATH=datas/excel
 FILE_STORAGE_PATH=datas/media
 
 # PostgreSQL配置
-PG_HOST=47.116.173.33
-PG_PORT=5432
-PG_DATABASE=travel
-PG_USER=postgres
-PG_PASSWORD=aqUPV0q-G.+ChJk=%Kna
+PG_HOST=
+PG_PORT=
+PG_DATABASE=
+PG_USER=
+PG_PASSWORD=
 
 # PostgreSQL连接池配置
 PG_MIN_CONNECTIONS=1
